add sticky layout on cms

--- a/src/addArtikel.html
+++ b/src/addArtikel.html
@@ -35,82 +35,87 @@
     />
 
     <div class="d-block d-sm-block d-lg-flex">
-      <div
-        class="col-2 d-none d-sm-none d-md-none d-lg-block bg-blue p-3 text-white sidebar-admin"
+      <aside
+        class="sticky-top d-none d-sm-none d-md-none d-lg-block bg-blue p-3 text-white sidebar-admin"
       >
-        <div class="position-fixed">
-          <div class="d-flex align-items-center pb-4">
-            <img src="assets/logo-sidebar.png" alt="" />
-          </div>
-          <ul class="list-unstyled text h-50">
-            <li class="nav-link active">
-              <a href="artikelDashboard.html" class="d-block p-2">
-                <i class="fa-solid fa-file-lines"></i> Artikel</a
-              >
-            </li>
-            <li class="nav-link">
-              <a href="ebook.html" class="d-block p-2"
-                ><i class="fa-solid fa-book"></i> E-Book</a
-              >
-            </li>
-            <li class="nav-link">
-              <a href="uplod.html" class="d-block p-2"
-                ><i class="fa-solid fa-upload"></i> Unggah</a
-              >
-            </li>
-            <li class="nav-link">
-              <a href="download.html" class="d-block p-2"
-                ><i class="fa-solid fa-user"></i> Download</a
-              >
-            </li>
-
-            <li class="nav-link">
-              <a href="admin.html" class="d-block p-2"
-                ><i class="fa-solid fa-user"></i> Menejemen User</a
-              >
-            </li>
-            <li class="nav-link mb-5">
-              <a href="roleManagement.html" class="d-block p-2"
-                ><i class="fa-solid fa-user-cog"></i> Peran</a
-              >
-            </li>
-            <div class="pt-5">
-              <li class="nav-link mt-5">
-                <a href="index.html" class="d-block p-2"
-                  ><i class="fa-solid fa-arrow-right-from-bracket"></i>
-                  Keluar</a
+        <div class="sticky-top overflow-auto">
+          <div class="">
+            <div class="d-flex align-items-center pb-4">
+              <img src="assets/logo-sidebar.png" alt="" />
+            </div>
+            <ul class="list-unstyled text h-50">
+              <li class="nav-link active">
+                <a href="artikelDashboard.html" class="d-block p-2">
+                  <i class="fa-solid fa-file-lines"></i> Artikel</a
                 >
               </li>
-            </div>
-          </ul>
+              <li class="nav-link">
+                <a href="ebook.html" class="d-block p-2">
+                  <i class="fa-solid fa-book"></i> E-Book</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="uplod.html" class="d-block p-2">
+                  <i class="fa-solid fa-upload"></i> Unggah</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="download.html" class="d-block p-2">
+                  <i class="fa-solid fa-user"></i> Download</a
+                >
+              </li>
+              <li class="nav-link">
+                <a href="admin.html" class="d-block p-2">
+                  <i class="fa-solid fa-user"></i> Menejemen User</a
+                >
+              </li>
+              <li class="nav-link mb-5">
+                <a href="roleManagement.html" class="d-block p-2">
+                  <i class="fa-solid fa-user-cog"></i> Peran</a
+                >
+              </li>
+              <div class="pt-5">
+                <li class="nav-link mt-5">
+                  <a href="index.html" class="d-block p-2">
+                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    Keluar</a
+                  >
+                </li>
+              </div>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="col-12 col-sm-12 col-lg-10">
+      </aside>
+      <div class="w-100">
         <!-- navbar -->
         <nav
-          class="navbar bg-white sticky-top shadow-sm d-flex justify-content-between align-items-center px-2 px-sm-5 w-100"
+          class="navbar bg-white sticky-top shadow-sm d-flex justify-content-between align-items-center px-2 px-sm-5"
         >
           <img src="assets/logo.png" alt="" />
           <div class="d-flex align-items-center gap-4">
-            <img
-              src="https://via.placeholder.com/30"
-              alt="Avatar"
-              class="rounded-circle img-fluid"
-            />
+            <div class="d-flex gap-4">
+              <div class="d-flex align-items-center gap-4">
+                <img
+                  src="https://via.placeholder.com/30"
+                  alt="Avatar"
+                  class="rounded-circle img-fluid"
+                />
+              </div>
+              <button
+                class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar"
+              >
+                <i class="fas fa-bars py-2"></i>
+              </button>
+            </div>
           </div>
-          <button
-            class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar"
-          >
-            <i class="fas fa-bars py-2"></i>
-          </button>
         </nav>
 
         <!-- sidebar mobile -->
-        <div class="d-sm-block d-block d-md-none">
+        <aside class="d-sm-block d-block d-md-block">
           <nav class="navbar position-absolute">
             <div class="container-fluid">
               <div
@@ -166,7 +171,7 @@
               </div>
             </div>
           </nav>
-        </div>
+        </aside>
         <!-- content -->
         <div class="px-3 px-sm-3 px-lg-5 mt-4 w-100">
           <div class="mt-5">
@@ -211,7 +216,7 @@
                   <div class="card-header">Deskripsi Artikel</div>
                   <div class="card-body">
                     <div
-                      class="mb-3 d-block d-lg-flex justify-content-start gap-2"
+                      class="mb-3 d-block d-md-block justify-content-start gap-2"
                     >
                       <button
                         type="button"
