--- a/src/ebook.html
+++ b/src/ebook.html
@@ -36,10 +36,10 @@
 
     <div class="">
       <div class="d-block d-sm-block d-lg-flex">
-        <div
-          class="d-none d-sm-none d-lg-block col-2 bg-blue p-3 text-white sidebar-admin overflow-auto"
+        <aside
+          class="d-none d-sm-none d-lg-block bg-blue p-3 text-white sidebar-admin sticky-top"
         >
-          <div class="position-fixed">
+          <div class="sticky-top overflow-aute">
             <div class="d-flex align-items-center pb-4">
               <img src="assets/logo-sidebar.png" alt="" />
             </div>
@@ -85,29 +85,31 @@
               </div>
             </ul>
           </div>
-        </div>
-        <div class="col-12 col-sm-12 col-lg-10">
+        </aside>
+        <div class="w-100">
           <!-- navbar -->
           <nav
             class="navbar justify-content-between bg-white px-lg-5 px-1 w-100"
           >
             <img src="assets/logo.png" alt="" />
-            <div class="d-flex align-items-center gap-4">
-              <img
-                src="https://via.placeholder.com/30"
-                alt="Avatar"
-                class="rounded-circle img-fluid"
-              />
+            <div class="d-flex gap-4">
+              <div class="d-flex align-items-center gap-4">
+                <img
+                  src="https://via.placeholder.com/30"
+                  alt="Avatar"
+                  class="rounded-circle img-fluid"
+                />
+              </div>
+              <button
+                class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar"
+              >
+                <i class="fas fa-bars py-2"></i>
+              </button>
             </div>
-            <button
-              class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none d-lg-none"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasNavbar"
-              aria-controls="offcanvasNavbar"
-            >
-              <i class="fas fa-bars py-2"></i>
-            </button>
           </nav>
           <!-- sidebar mobile -->
           <div class="d-sm-block d-block d-lg-none">
