--- a/src/addEbook.html
+++ b/src/addEbook.html
@@ -35,10 +35,10 @@
     />
 
     <div class="d-block d-sm-block d-lg-flex">
-      <div
-        class="d-none d-sm-none d-lg-block col-2 bg-blue p-3 text-white sidebar-admin overflow-auto"
+      <aside
+        class="d-none d-sm-none d-lg-block bg-blue p-3 text-white sidebar-admin sticky-top"
       >
-        <div class="position-fixed">
+        <div class="sticky-top overflow-aute">
           <div class="d-flex align-items-center pb-4">
             <img src="assets/logo-sidebar.png" alt="" />
           </div>
@@ -84,30 +84,34 @@
             </div>
           </ul>
         </div>
-      </div>
-      <div class="col-12 col-sm-12 col-lg-10">
+      </aside>
+      <div class="w-100">
         <!-- navbar -->
         <nav class="navbar justify-content-between bg-white px-lg-5 px-1 w-100">
           <img src="assets/logo.png" alt="" />
-          <div class="d-flex align-items-center gap-4">
-            <img
-              src="https://via.placeholder.com/30"
-              alt="Avatar"
-              class="rounded-circle img-fluid"
-            />
+          <div class="d-flex gap-4">
+            <div class="d-flex gap-4">
+              <div class="d-flex align-items-center gap-4">
+                <img
+                  src="https://via.placeholder.com/30"
+                  alt="Avatar"
+                  class="rounded-circle img-fluid"
+                />
+              </div>
+              <button
+                class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar"
+              >
+                <i class="fas fa-bars py-2"></i>
+              </button>
+            </div>
           </div>
-          <button
-            class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar"
-          >
-            <i class="fas fa-bars py-2"></i>
-          </button>
         </nav>
         <!-- sidebar mobile -->
-        <div class="d-block d-sm-block d-lg-none">
+        <aside class="d-block d-sm-block d-lg-none">
           <nav class="navbar position-absolute">
             <div class="container-fluid">
               <div
@@ -163,7 +167,7 @@
               </div>
             </div>
           </nav>
-        </div>
+        </aside>
         <!-- content -->
         <div class="px-3 px-sm-3 px-lg-5 mt-4 w-100">
           <div class="mt-5">
@@ -207,9 +211,7 @@
                 <div class="card w-100">
                   <div class="card-header">Deskripsi E - Book</div>
                   <div class="card-body">
-                    <div
-                      class="mb-3 d-block d-lg-flex justify-content-start gap-2"
-                    >
+                    <div class="mb-3 d-block justify-content-start gap-2">
                       <button
                         type="button"
                         class="btn btn-link text-black-50 text-decoration-none"
