--- a/src/roleManagement.html
+++ b/src/roleManagement.html
@@ -35,10 +35,10 @@
     />
 
     <div class="d-block d-sm-block d-lg-flex">
-      <div
-        class="col-2 d-none d-sm-none d-md-none d-lg-block bg-blue p-3 text-white sidebar-admin"
+      <aside
+        class="sticky-top d-none d-sm-none d-md-none d-lg-block bg-blue p-3 text-white sidebar-admin"
       >
-        <div class="position-fixed">
+        <div class="sticky-top overflow-auto">
           <div class="d-flex align-items-center pb-4">
             <img src="assets/logo-sidebar.png" alt="" />
           </div>
@@ -84,33 +84,35 @@
             </div>
           </ul>
         </div>
-      </div>
-      <div class="col-12 col-sm-12 col-lg-10">
+      </aside>
+      <div class="w-100">
         <!-- navbar -->
         <nav
           class="navbar bg-white sticky-top shadow-sm d-flex justify-content-between align-items-center px-2 px-sm-5 w-100"
         >
           <img src="assets/logo.png" alt="" />
-          <div class="d-flex align-items-center gap-4">
-            <img
-              src="https://via.placeholder.com/30"
-              alt="Avatar"
-              class="rounded-circle img-fluid"
-            />
+          <div class="d-flex gap-4">
+            <div class="d-flex align-items-center gap-4">
+              <img
+                src="https://via.placeholder.com/30"
+                alt="Avatar"
+                class="rounded-circle img-fluid"
+              />
+            </div>
+            <button
+              class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+            >
+              <i class="fas fa-bars py-2"></i>
+            </button>
           </div>
-          <button
-            class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar"
-          >
-            <i class="fas fa-bars py-2"></i>
-          </button>
         </nav>
 
         <!-- sidebar mobile -->
-        <div class="d-sm-block d-block d-md-none">
+        <aside class="d-sm-block d-block d-md-block">
           <nav class="navbar position-absolute">
             <div class="container-fluid">
               <div
@@ -166,7 +168,7 @@
               </div>
             </div>
           </nav>
-        </div>
+        </aside>
         <!-- content -->
         <div class="px-3 px-sm-3 px-lg-5 mt-4 w-100">
           <div class="d-flex justify-content-between align-items-center mb-3">
@@ -203,12 +205,12 @@
                 </div>
               </div>
               <div class="d-flex row gy-4 mt-4 col-12 align-items-center">
-                <div class="col-4 col-lg-2">
+                <div class="col-2 col-lg-2">
                   <label for="exampleFormControlInput1" class="form-label"
                     >Akses</label
                   >
                 </div>
-                <div class="col-8 col-lg-4">
+                <div class="col-10 col-lg-6">
                   <div class="row gy-5 row-cols-2">
                     <div class="d-flex align-items-center gap-2">
                       <input
