--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -242,7 +242,7 @@
         <div
           class="d-lg-flex d-block align-items-center gap-4 justify-content-between"
         >
-          <h3>
+          <h3 class="w-100 fs-4">
             Komoditas <span class="text-warning">Udang</span> Tahun 2023 Pasar
             US
           </h3>
