--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
                 Your
                 <span class="">Exports</span>
               </h1>
-              <a href="#komoditas" class="btn btn-lg btn-darkblue"
+              <a href="#komoditas" class="btn btn-lg btn-primary"
                 >Get Started
                 <span class="ms-1"
                   ><i class="fa-solid fa-arrow-right text-white"></i></span
