--- a/src/market.html
+++ b/src/market.html
@@ -241,9 +241,9 @@
       <div class="flex-grow-1 px-5 py-3 mb-5 w-50">
         <!-- input hero -->
         <div
-          class="d-block d-sm-block d-lg-flex align-items-start gap-4 justify-content-between"
+          class="d-block d-sm-block d-lg-flex align-items-center gap-4 justify-content-between"
         >
-          <h3>
+          <h3 class="w-100 fs-4">
             Komoditas <span class="text-warning">Udang</span> Tahun 2023 Pasar
             US
           </h3>
