--- a/src/prefensi.html
+++ b/src/prefensi.html
@@ -246,9 +246,9 @@
         <!-- end input hero -->
 
         <div
-          class="d-block d-sm-block d-lg-flex align-items-start gap-4 justify-content-between"
+          class="d-block d-sm-block d-lg-flex align-items-center gap-4 justify-content-between"
         >
-          <h3>
+          <h3 class="fs-4 w-100">
             Komoditas <span class="text-warning">Udang</span> Tahun 2023 Pasar
             US
           </h3>
