--- a/src/artikel.html
+++ b/src/artikel.html
@@ -22,42 +22,32 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
     />
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg shadow-sm">
-      <div class="container-fluid px-25">
-        <a class="navbar-brand d-none d-md-block" href="#">
-          <img src="assets/logo.png" alt="" />
-        </a>
-        <a class="navbar-brand d-block d-md-none" href="#">
-          <img src="assets/logoMobile.png" alt="" />
-        </a>
-        <div class="ms-auto ms-md-0 d-block d-md-none me-2">
-          <a
-            class="text-login fw-bold text-decoration-none text-center btn btn-darkblue px-3"
-            href="#"
-          >
-            Login
-          </a>
-        </div>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container mx-auto">
+        <a class="navbar-brand" href="#"
+          ><img src="assets/logo.png" alt=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarText"
-          aria-controls="navbarText"
+          data-bs-target="#navbarScroll"
+          aria-controls="navbarScroll"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse justify-content-center"
-          id="navbarText"
-        >
-          <ul class="navbar-nav mb-2 mb-lg-0 text-center mt-3 mt-md-0">
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul
+            class="navbar-nav mx-auto my-2 my-lg-0"
+            style="--bs-scroll-height: 100px"
+          >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#artikel">Artikel</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -69,41 +59,48 @@
               >
                 Komoditas
               </a>
-              <ul class="dropdown-menu text-center justify-content-center">
+              <ul class="dropdown-menu text-start justify-content-center">
                 <li><a class="dropdown-item" href="#">Udang</a></li>
                 <li><a class="dropdown-item" href="#">Tuna</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Nila</a>
-                </li>
+
                 <li>
                   <a class="dropdown-item" href="#">Kepiting</a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="#">Rumput Laut</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Lobster</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Tilapia</a>
+                </li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#artikel">Artikel</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#statistik">Statistik</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#ebook">E-Book</a>
+              <a class="nav-link" href="E-Book">E-Book</a>
             </li>
           </ul>
-        </div>
-        <div class="mx-auto ms-md-0 d-none d-md-block">
-          <a
-            class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-outline-darkblue px-4 w-100"
-            href="#"
-          >
-            Login
-          </a>
+          <form class="d-flex" role="search">
+            <button
+              type="button"
+              class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-outline-darkblue px-4 w-100"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            >
+              Login
+            </button>
+          </form>
         </div>
       </div>
     </nav>
     <!-- end navbar -->
 
-    <main class="heroArtikel">
+    <main class="heroArtikel container mx-auto">
       <!-- hero -->
       <div class="px-25 mt-3">
         <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
@@ -232,86 +229,88 @@
     </main>
 
     <!-- footer -->
-    <footer class="px-25 py-3 mt-5 container-fluid">
-      <div>
-        <div class="d-flex gap-4 align-items-center pt-4">
-          <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
-          <img src="assets/logoSimple.png" alt="" class="mb-2 img-fluid" />
+    <footer class="px-25 py-3 mt-5">
+      <div class="container mx-auto">
+        <div>
+          <div class="d-flex gap-4 align-items-center pt-4">
+            <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
+            <img src="assets/logoSimple.png" alt="" class="mb-2 img-fluid" />
+          </div>
+          <div
+            class="justify-content-between align-items-center d-md-flex d-block mt-4"
+          >
+            <div class="mt-md-0 mt-1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur. Et lorem aliquam urna
+                faucibus <br />
+                molestie. Eu ipsum aenean sociis consequat fringilla. Adipiscing
+                orci risus lacus <br />
+                felis neque sit. Egestas nulla tristique est consequat risus sit
+                sapien ullamcorper.
+              </p>
+            </div>
+
+            <div class="d-flex gap-4 mt-md-0 mt-4 mb-4">
+              <a href="#"> <img src="assets/facebook.svg" alt="" /></a>
+              <a href="#"> <img src="assets/twitter.svg" alt="" /></a>
+              <a href="#"> <img src="assets/Instagram.svg" alt="" /></a>
+            </div>
+          </div>
         </div>
         <div
-          class="justify-content-between align-items-center d-md-flex d-block mt-4"
+          class="d-md-flex justify-content-md-between d-block mt-5 d-md-block d-none"
         >
-          <div class="mt-md-0 mt-1">
-            <p>
-              Lorem ipsum dolor sit amet consectetur. Et lorem aliquam urna
-              faucibus <br />
-              molestie. Eu ipsum aenean sociis consequat fringilla. Adipiscing
-              orci risus lacus <br />
-              felis neque sit. Egestas nulla tristique est consequat risus sit
-              sapien ullamcorper.
-            </p>
+          <div class="d-flex gap-3 gap-md-4">
+            <div class="d-flex gap-2">
+              <img src="assets/phone.svg" alt="" />
+              <p>Telepon: (021)</p>
+            </div>
+            <div class="d-flex gap-2">
+              <img src="assets/mail.svg" alt="" />
+              <p>Layanan Kontak Kami</p>
+            </div>
           </div>
-
-          <div class="d-flex gap-4 mt-md-0 mt-4 mb-4">
-            <a href="#"> <img src="assets/facebook.svg" alt="" /></a>
-            <a href="#"> <img src="assets/twitter.svg" alt="" /></a>
-            <a href="#"> <img src="assets/Instagram.svg" alt="" /></a>
+          <div class="d-flex gap-4">
+            <div class="d-flex gap-2">
+              <img src="assets/database.svg" alt="" />
+              <p>Data & Informasi</p>
+            </div>
+            <div class="d-flex gap-2 align-items-center">
+              <img src="assets/faq.svg" alt="" />
+              <p>FAQ</p>
+            </div>
+            <div class="d-flex gap-2">
+              <img src="assets/callcenter.svg" alt="" />
+              <p>Help Center</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div
-        class="d-md-flex justify-content-md-between d-block mt-5 d-md-block d-none"
-      >
-        <div class="d-flex gap-3 gap-md-4">
-          <div class="d-flex gap-2">
+        <div class="d-block d-md-none mt-3 mx-auto">
+          <div class="d-flex mt-3 gap-2">
             <img src="assets/phone.svg" alt="" />
             <p>Telepon: (021)</p>
           </div>
-          <div class="d-flex gap-2">
+          <div class="d-flex mt-3 gap-2">
             <img src="assets/mail.svg" alt="" />
             <p>Layanan Kontak Kami</p>
           </div>
-        </div>
-        <div class="d-flex gap-4">
-          <div class="d-flex gap-2">
+          <div class="d-flex mt-3 gap-2">
             <img src="assets/database.svg" alt="" />
             <p>Data & Informasi</p>
           </div>
-          <div class="d-flex gap-2 align-items-center">
+          <div class="d-flex mt-3 gap-2 align-items-center">
             <img src="assets/faq.svg" alt="" />
             <p>FAQ</p>
           </div>
-          <div class="d-flex gap-2">
+          <div class="d-flex gap-2 mt-3">
             <img src="assets/callcenter.svg" alt="" />
             <p>Help Center</p>
           </div>
         </div>
-      </div>
-      <div class="d-block d-md-none mt-3 mx-auto">
-        <div class="d-flex mt-3 gap-2">
-          <img src="assets/phone.svg" alt="" />
-          <p>Telepon: (021)</p>
+        <div class="text-center mt-5 py-4">
+          <hr class="mb-3" />
+          © Hak Cipta 2024 <span class="fw-bold">Market Intelligence</span>
         </div>
-        <div class="d-flex mt-3 gap-2">
-          <img src="assets/mail.svg" alt="" />
-          <p>Layanan Kontak Kami</p>
-        </div>
-        <div class="d-flex mt-3 gap-2">
-          <img src="assets/database.svg" alt="" />
-          <p>Data & Informasi</p>
-        </div>
-        <div class="d-flex mt-3 gap-2 align-items-center">
-          <img src="assets/faq.svg" alt="" />
-          <p>FAQ</p>
-        </div>
-        <div class="d-flex gap-2 mt-3">
-          <img src="assets/callcenter.svg" alt="" />
-          <p>Help Center</p>
-        </div>
-      </div>
-      <div class="text-center mt-5 py-4">
-        <hr class="mb-3" />
-        © Hak Cipta 2024 <span class="fw-bold">Market Intelligence</span>
       </div>
     </footer>
     <!-- end footer -->
